navbar has been added

--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,8 @@
     display: flex;
     flex-direction: column;
 }
+
+.hero-section nav {
+    background-color: sienna;
+    padding: 1rem 2rem;
+}
