--- a/styles.css
+++ b/styles.css
@@ -46,8 +46,19 @@
 .main-container {
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    /* align-items: center; */
     height: 100%;
+}
+
+.main-container .start-game {
+    height: 300px;
+    width: 400px;
+    border: 2px solid sienna;
+    border-radius: 1.5rem;
+    padding: 1rem 2rem;
+    margin-left: 100px;
+    margin-top: 50px;
+
 }
 
 
