--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,16 @@
 
 }
 
+.main-container .start-game button {
+    border-radius: 1rem;
+    border: 2px solid sienna;
+    padding: 12px 16px;
+    background: none;
+    cursor: pointer;
+    font-size: 1.2rem;
+    color: sienna;
+}
+
 
 .hidden {
     display: none;
