--- a/styles.css
+++ b/styles.css
@@ -81,3 +81,8 @@
     text-align: center;
     margin: 1rem 0;
 }
+
+.main-container .start-game .size-btns {
+    display: flex;
+    justify-content: space-around;
+}
