start-btn has been styled |  have to unify it with size btn

--- a/styles.css
+++ b/styles.css
@@ -86,3 +86,8 @@
     display: flex;
     justify-content: space-around;
 }
+
+.main-container .start-game .start-btn  {
+    text-align: center;
+    margin: 1rem 0;
+}
