flex-grow ain't working

--- a/styles.css
+++ b/styles.css
@@ -86,3 +86,9 @@
     text-align: center;
     margin: 1rem 0;
 }
+
+.main-container .start-game .choose-cards {
+    flex-grow: 1;
+    /* padding: 2rem; */
+    /* background-color: seagreen; */
+}
