parent container is flex, yet it's not working

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,9 @@
     margin-left: 100px;
     margin-top: 50px;
     background-color: #FFF7E9;
+    /* display: flex; */
+        display: flex;
+    flex-direction: column;
 
 }
 
@@ -88,7 +91,7 @@
 }
 
 .main-container .start-game .choose-cards {
-    flex-grow: 1;
+    flex: 1;
     /* padding: 2rem; */
     /* background-color: seagreen; */
     /* ! parent: .start-game  is not a flex container */
