--- a/styles.css
+++ b/styles.css
@@ -105,3 +105,13 @@
     height: 100px;
     background-color: sienna;
 }
+
+.game-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.game-container img {
+    height: 150px;
+    width: 100px;
+}
