--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@
 .game-container {
     width: 50%;
     height: 100px;
-    background-color: sienna;
+    /* background-color: sienna; */
 
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -113,4 +113,5 @@
 .game-container img {
     height: 150px;
     width: 100px;
+    cursor: pointer;
 }
