--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,11 @@
 
     display: flex;
     flex-direction: column;
+
+    background-image:  url(/img/bg.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .hero-section nav {
