--- a/styles.css
+++ b/styles.css
@@ -124,3 +124,18 @@
 .matched {
     visibility: hidden;
 }
+
+.game-over {
+    position: relative;
+    background-color: sienna;
+    width: 100%;
+    height: 100%;
+}
+
+.game-over img {
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    height: 200px;
+    width: 500px;
+}
