--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,7 @@
 /* ! Gotta debug the flex: 1; not working */
 
 .game-container {
+    position: relative; /* 👈 THIS is key */
     width: 50%;
     height: 100px;
     /* background-color: sienna; */
@@ -126,16 +127,18 @@
 }
 
 .game-over {
-    position: relative;
+    justify-content: center;
+    align-items: center;
     background-color: sienna;
     width: 100%;
     height: 100%;
 }
 
 .game-over img {
-    position: absolute;
-    top: 50%;
-    right: 50%;
     height: 200px;
     width: 500px;
+}
+
+.game-over.visible {
+    display: flex;
 }
