--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@
 
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 .main-container .start-game .size-btns {
@@ -127,18 +127,17 @@
 }
 
 .game-over {
+    position: absolute;
+    inset: 0; /* top:0 right:0 bottom:0 left:0 */
+
+    /* display: flex;
     justify-content: center;
-    align-items: center;
-    background-color: sienna;
-    width: 100%;
-    height: 100%;
+    align-items: center; */
+
+    z-index: 10;;
 }
 
 .game-over img {
     height: 200px;
     width: 500px;
-}
-
-.game-over.visible {
-    display: flex;
 }
