using grid layout, cuz it's more responsive

--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@
     height: 100vh;
     background-color: seagreen;
 
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 
     background-image:  url(/img/bg.jpg);
     background-size: cover;
