--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,8 @@
     "main main"
     "footer footer";
 
+    grid-template-rows: auto 1fr auto;
+
     background-image:  url(/img/bg.jpg);
     background-size: cover;
     background-position: center;
@@ -28,7 +30,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-height: 10vh;
+    /* max-height: 10vh; */
     grid-area: navbar;
 }
 
@@ -56,7 +58,9 @@
 
 .main-container {
     display: flex;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
+    /* justify-content: center;
+    align-items: center; */
 
     grid-area: main;
 }
@@ -118,7 +122,7 @@
     /* background-color: sienna; */
 
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     gap: 12px;
 }
 
