fixed navbar + width 100%

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,10 @@
     align-items: center;
     /* max-height: 10vh; */
     grid-area: navbar;
+
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 .hero-section .btn-container {
