using medea query to make cards smaller

--- a/styles.css
+++ b/styles.css
@@ -160,3 +160,10 @@ footer {
     grid-area: footer;
     background-color: sienna;
 }
+
+@media(max-width: 550px) {
+    .game-container img {
+        width: 50px;
+        height: 75px;
+    }
+}
