--- a/styles.css
+++ b/styles.css
@@ -166,4 +166,10 @@ footer {
         width: 50px;
         height: 75px;
     }
+    nav button {
+        display: none;
+    }
+    nav h2 {
+        font-size: 1rem;
+    }
 }
