--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@
     border: 2px solid sienna;
     border-radius: 1.5rem;
     padding: 1rem 2rem;
-    margin-left: 100px;
+    /* margin-left: 100px; */
     margin-top: 50px;
     background-color: #FFF7E9;
     /* display: flex; */
