--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@
 
 .main-container .start-game {
     height: 300px;
-    width: 400px;
+    /* width: 400px; */
     border: 2px solid sienna;
     border-radius: 1.5rem;
     padding: 1rem 2rem;
