--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@
 .main-container .start-game button {
     border-radius: 1rem;
     border: 2px solid sienna;
-    padding: 12px 16px;
+    padding: 0.75rem 1.25rem;
     background: none;
     cursor: pointer;
     font-size: 1.2rem;
