--- a/styles.css
+++ b/styles.css
@@ -179,14 +179,18 @@ footer {
     }
 
     .game-container img {
-        width: 50px;
-        height: 75px;
+        width: 75px;
+        height: 50px;
     }
     nav button {
         display: none;
     }
     nav h2 {
         display: none;
+    }
+
+    .game-container .start-game {
+        margin: 0 auto;
     }
     .mobile-only {
         display: inline-block;
