--- a/styles.css
+++ b/styles.css
@@ -128,8 +128,8 @@
 
 .game-container {
     position: relative; /* 👈 THIS is key */
-    width: 50%;
-    height: 100px;
+    width: min(100%, 500px);
+    margin: 1rem auto;
     /* background-color: sienna; */
 
     display: grid;
