repeat(1, fr) is perfect for the desktop

--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@
     /* background-color: sienna; */
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+    grid-template-columns: repeat(4, 1fr);
     gap: 12px;
 }
 
